# localfiles_mcp

./: README.md  pyproject.toml  test.txt
claude_local_notes/: test2.txt
src/mcpserver/: __main__.py  local.py  prompt.py
